[workspace]
members = [
    "fifo-mempool",
    "libp2p-network",
    "host-integration"
]
resolver = "2"

[workspace.dependencies]
bytesize = "1.0"
eyre = "0.6"
ractor = "0.14.6"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
prost-build = "0.13"
prost-types = "0.13"
protox = "0.8.0"
rand = "0.8"
tokio = { version = "1.46.1", features = ["full", "test-util"] }
libp2p             = { version = "0.56.0", features = ["macros", "identify", "tokio", "ed25519", "ecdsa", "tcp", "quic", "noise", "yamux", "gossipsub", "dns", "ping", "metrics", "request-response", "cbor", "serde", "kad"] }
libp2p-gossipsub   = { version = "0.49.0", features = ["metrics"] }
libp2p-identity = "0.2.12"
prost = "0.13"
prometheus-client = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
seahash            = "4.1"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
prometheus = "0.13"
sha2 = "0.10"
malachitebft-config = { package = "informalsystems-malachitebft-config", path = "../malachite/code/crates/config" }
malachitebft-metrics = { package = "informalsystems-malachitebft-metrics", path = "../malachite/code/crates/metrics" }
malachitebft-proto = { version = "0.5.0", package = "informalsystems-malachitebft-proto", path = "../malachite/code/crates/proto" }
malachitebft-test-mempool = { package = "informalsystems-malachitebft-test-mempool", path = "../malachite/code/crates/test/mempool" }
