[package]
name = "fifo-mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
ractor = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
libp2p-identity = { workspace = true }
malachitebft-metrics = { workspace = true }
malachitebft-test-mempool = { workspace = true }
libp2p-network = { path = "../libp2p-network" }
futures = { workspace = true }
prometheus = { workspace = true }
prometheus-client = { workspace = true }
libp2p = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
