[package]
name = "host-integration"
version = "0.1.0"
edition = "2021"

[lib]
name = "host_integration"
path = "src/lib.rs"

[dependencies]
bytesize = { workspace = true }
fifo-mempool = { path = "../fifo-mempool" }
libp2p-network = { path = "../libp2p-network" }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
malachitebft-config = { workspace = true }
malachitebft-metrics = { workspace = true }
malachitebft-test-mempool = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
ractor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }