[package]
name = "libp2p-network"
version = "0.1.0"
edition = "2021"

[dependencies]
ractor = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
libp2p-identity = { workspace = true }

malachitebft-test-mempool = { workspace = true }
async-trait = { workspace = true } 

malachitebft-metrics = { workspace = true }
malachitebft-proto = { workspace = true }

eyre = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-gossipsub = { workspace = true, features = ["metrics"] }
prost = { workspace = true }
prost-types = { workspace = true }
seahash = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }